--- a/assets/scss/groundlist.scss
+++ b/assets/scss/groundlist.scss
@@ -1,14 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito+Sans:400,700,800,900&display=swap");
 
 // variables must be before bootstrap import
-$font-family-base: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-
-$primary: #ac2421; // equals rgb(172,36,33)
-$primary-hover-link: #6c1715; // matches <a> hover color
-
-$theme-colors: (
-  "primary": $primary
-);
+@import "_variables.scss";
 
 @import "bootstrap/scss/bootstrap.scss";
 
@@ -139,6 +132,10 @@ h2 {
   font-size: 40px;
   line-height: 1;
   margin-bottom: 1rem;
+  font-weight: 900;
+}
+
+h3 {
   font-weight: 900;
 }
 
